# openvsf

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: debug.yaml  debug_punyo.yaml  debug_vsf_from_rgbd.yaml  neural_vsf.yaml  point_vsf.yaml  pressure_neural.yaml  punyo_neural.yaml  punyo_neural_joint.yaml
configs/datasets/: kinova_punyo_postprocessed_keys.yaml  kinova_punyo_raw_keys.yaml
configs/estimators/: diag_ekf.yaml  quad_prog.yaml  sgd.yaml
configs/factories/: demo_rgbd_factory.yaml
configs/sensors/: kinova_joint_torques.yaml  punyo_force.yaml  punyo_pressure.yaml
configs/worlds/: kinova_punyo_world.yaml  kinova_world.yaml  punyo_world.yaml
demos/: neural_vsf_playground.ipynb  vsf_playground.ipynb
docs/source/: Contributing.rst  FAQ.rst  Manual-Customization.rst  Manual-Estimation.rst  Manual-Installation.rst  Manual-QuickStart.rst  Manual-Simulation.rst  Manual-Walkthrough.rst  Manual.rst  conf.py  index.rst  vsf.core.rst  vsf.dataset.rst  vsf.estimator.rst  vsf.prior.rst  vsf.rst  vsf.sensor.rst  vsf.sim.rst  vsf.utils.rst  vsf.visualize.rst
knowledge/calibration/: camera_params.json
knowledge/punyo/: equalized.vtk  flat.vtk  punyo_ref_mesh.ply
knowledge/robot_model/: kinova_gen3.urdf  punyo2end_effector_transform.json  punyo_mesh_complete.ply  punyo_mesh_partial.ply
knowledge/vis_params/: klampt_viewport.txt  view_params.json
scripts/: make_vsf.py  neural_vsf_estimate.py  point_vsf_estimate.py  reformat_dataset.py  sim_vsf.py  vis_vsf.py
tests/: test.py  test_diag_ekf.py  test_observation_model.py  test_point_vsf.py  test_punyo_dense_force.py  test_punyo_pressure_sensor.py  test_recursive_estimator.py
vsf/: __init__.py  constructors.py
vsf/core/: __init__.py  base_vsf.py  neural_vsf.py  point_vsf.py  vsf_factory.py
vsf/dataset/: __init__.py  base_dataset.py  constructors.py  file_loader_dataset.py  multi_modal_dataset.py
vsf/estimator/: __init__.py  base_material_estimator.py  neural_vsf_estimator.py  point_vsf_estimator.py  point_vsf_meta_learning.py  quad_prog_optimizer.py  recursive_optimizer.py
vsf/prior/: constructors.py  (+6 more)
(+34 files in other folders)
