[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvsf"
version = "0.0.1"
description = "Open volumetric stiffness field"
authors = [
  { name = "Shaoxiong Yao", email = "syao16@illinois.edu" },
  { name = "Jiaheng Han", email = "jh127@illinois.edu" },
  { name = "Kris Hauser", email = "kkhauser@illinois.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering"
]
keywords = ["tactile model", "simulation", "estimation"]
dependencies = [
  "numpy",
  "torch",
  "open3d",
  "trimesh[easy]",
  "klampt>=0.10.0",
  "cvxpy",
  "dacite",
]

[project.optional-dependencies]
full = [
  "meshio",
  "mesh2sdf",
  "PyOpenGL",
  "PyQt5",
  "opencv-python",
  "scipy",
]

[tool.setuptools.packages.find]
include = ["vsf*"]
exclude = ["demos*", "configs*", "out_data*", "knowledge*"]
